[package]
name = "clicolors-control"
description = "A common utility library to control CLI colorization"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["cli", "clicolor", "clicolors", "colors"]
license = "MIT"
homepage = "https://github.com/mitsuhiko/clicolors-control"
documentation = "https://docs.rs/clicolors-control"
readme = "README.md"

[features]
default = ["terminal_autoconfig"]
terminal_autoconfig = []

[dependencies]
lazy_static = "0"

[target.'cfg(windows)'.dependencies]
winapi = "0"
kernel32-sys = "0"

[target.'cfg(unix)'.dependencies]
libc = "0"
