[package]
name = "clicolors-control"
description = "A common utility library to control CLI colorization"
version = "0.3.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["cli", "clicolor", "clicolors", "colors"]
license = "MIT"
repository = "https://github.com/mitsuhiko/clicolors-control"
documentation = "https://docs.rs/clicolors-control"
readme = "README.md"

[features]
default = ["terminal_autoconfig"]
terminal_autoconfig = []

[dependencies]
clicolors-control = "1.0"